# lesma-playground

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  requirements.txt
.github/workflows/: build_and_push.yaml
src/: main.cpp
web/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
web/public/: 404.html  index.html
web/src/: App.tsx  index.tsx  setupProxy.js
web/src/api/run/: index.ts
web/src/components/core/: Header.tsx
web/src/components/core/Layout/: Layout.tsx
web/src/components/core/Panel/: PanelHeader.tsx
web/src/components/core/StatusBar/: StatusBar.tsx
web/src/components/editor/: CodeEditor.tsx  lesma.ts  props.ts  provider.ts
web/src/components/modals/: AboutModal.tsx
web/src/components/pages/: NotFoundPage.css  NotFoundPage.tsx  Playground.tsx
web/src/components/preview/: Preview.tsx  ResizablePreview.tsx
web/src/components/settings/: SettingsModal.tsx
web/src/components/utils/: ConnectedThemeProvider.tsx
web/src/plugins/vim/: VimStatusBarItem.tsx  editor.ts
web/src/services/: api.ts  config.ts  snippets.json
web/src/store/: actions.ts  dispatch.ts  reducers.ts  state.ts
web/src/store/vim/: actions.ts  reducers.ts
web/src/utils/: headerutils.ts  theme.ts
